Fix icons being squished

--- a/css/index.css
+++ b/css/index.css
@@ -37,3 +37,7 @@ main {
   list-style-position: inside;
   @apply my-2;
 }
+
+a {
+  overflow-wrap: anywhere;
+}
